PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2005, PHP 5.1 Beta 3
- Fixed bug #32660 (Assignment by reference causes crash when field access is
  overloaded (__get)). (Dmitry)
- Fixed bug #30828 (debug_backtrace() reports incorrect class in overridden
  methods). (Dmitry)
- Fixed bug #27268 (Bad references accentuated by clone). (Dmitry)

22 Jun 2005, PHP 5.1 Beta 2
- Improved PHP extension loading mechanism with support for module dependencies
  and conflicts. (Jani, Dmitry) 
- Allowed return by reference from internal functions. (Marcus, Andi, Dmitry)
- Rewrote strtotime() with support for timezones and many new formats.
  Implements feature requests #21399, #26694, #28088, #29150, #29585 and
  #29595. (Derick)
- Added bindto socket context option. (Ilia)
- Added offset parameter to the stream_copy_to_stream() function. (Ilia)
- Added offset & length parameters to substr_count() function. (Ilia)
- Fixed inheritance check to control return by reference and pass by reference
  correctly (ArrayAccess can no longer support references correctly).
  (Marcus, Andi, Dmitry)
- Fixed PDO shutdown problem (possible inifite loop running rollback on
  shutdown). (Wez)
- Fixed PECL bug #3714 (PDO: beginTransaction doesn't work if you're in
  auto-commit mode). (Wez)
- Fixed bug #33427 (ext/odbc: check if unixODBC header file exists). (Jani)
- Fixed bug #33389 (double free() when exporting a ReflectionClass). (Marcus)
- Fixed bug #33382 (array_reverse() fails after *sort()), 
  introduced by zend_hash_sort() optimizations in HEAD. (Tony)
- Fixed bug #33340 (CLI Crash when calling php:function from XSLT). (Rob)
- Fixed bug #33318 (throw 1; results in Invalid opcode 108/1/8). (Dmitry)
- Fixed bug #33312 (ReflectionParameter methods do not work correctly).
  (Dmitry)
- Fixed bug #33299 (php:function no longer handles returned dom objects). 
  (Rob, Joe Orton)