@@ -1622,6 +1622,12 @@ static zval *debug_backtrace_get_args(void ***curpos TSRMLS_DC)
 		(*arg)->refcount++;
 		add_next_index_zval(arg_array, *arg);
 	}
+
+	/* skip args from incomplete frames */
+	while ((((*curpos)-1) > EG(argument_stack).elements) && *((*curpos)-1)) {
+		(*curpos)--;
+	}
+
 	return arg_array;
 }
 
@@ -1669,6 +1675,11 @@ ZEND_FUNCTION(debug_print_backtrace)
 		args -= *(ulong*)args;
 		frames_on_stack++;
 
+		/* skip args from incomplete frames */
+		while (((args-1) > EG(argument_stack).elements) && *(args-1)) {
+			args--;
+		}
+
 		if ((args-1) == EG(argument_stack).elements) {
 			arg_stack_consistent = 1;
 			break;
@@ -1681,6 +1692,13 @@ ZEND_FUNCTION(debug_print_backtrace)
 	ptr = ptr->prev_execute_data;
 	cur_arg_pos -= 2;
 	frames_on_stack--;
+
+	if (arg_stack_consistent) {
+		/* skip args from incomplete frames */
+		while (((cur_arg_pos-1) > EG(argument_stack).elements) && *(cur_arg_pos-1)) {
+			cur_arg_pos--;
+		}
+	}
 
 	array_init(return_value);
 
@@ -1817,6 +1835,11 @@ ZEND_API void zend_fetch_debug_backtrace(zval *return_value, int skip_last TSRML
 		args -= *(ulong*)args;
 		frames_on_stack++;
 
+		/* skip args from incomplete frames */
+		while (((args-1) > EG(argument_stack).elements) && *(args-1)) {
+			args--;
+		}
+
 		if ((args-1) == EG(argument_stack).elements) {
 			arg_stack_consistent = 1;
 			break;
@@ -1836,6 +1859,13 @@ ZEND_API void zend_fetch_debug_backtrace(zval *return_value, int skip_last TSRML
 		cur_arg_pos -= (arg_count + 2);
 		frames_on_stack--;
 		ptr = ptr->prev_execute_data;
+
+		if (arg_stack_consistent) {
+			/* skip args from incomplete frames */
+			while (((cur_arg_pos-1) > EG(argument_stack).elements) && *(cur_arg_pos-1)) {
+				cur_arg_pos--;
+			}
+		}
 	}
 
 	array_init(return_value);
